<resources>
    <string name="app_name">LearnApp</string>
    <string name="mainButtonText">Dodaj zestaw</string>
    <string name="addSetMainText">Dodawanie zestawu</string>
    <string name="addSet">Dodaj zestaw</string>
    <string name="addSetName">Podaj tytuł zestawu</string>
    <string name="addElement">Dodaj pojęcie</string>
    <string name="learn">Pisanie</string>
    <string name="deleteSet">Usuń zestaw</string>
    <string name="ret">Wróć</string>
    <string name="addElementText">Dodawanie pojęcia</string>
    <string name="addDefHint">Podaj pojęcie</string>
    <string name="addDescHint">Podaj definicję</string>
    <string name="addElementToDb">Dodaj pojęcie</string>
    <string name="readyButton">Gotowe</string>
    <string name="correct">Poprawne:</string>
    <string name="inserted">Podane:</string>
    <string name="exit">Wyjdź</string>
    <string name="remain">Pozostało: </string>
    <string name="hint">💡</string>
    <string name="endingText">Zestaw ukończony</string>
    <string name="wordsInSet">Zestaw liczy </string>
    <string name="words"> słów</string>
    <string name="errorCnt">Ilość błędów: </string>
    <string name="mostErrorText">Najczęstszy błąd</string>
    <string name="retToMain">Powrót do menu</string>
    <string name="yourSets">Twoje zestawy</string>
    <string name="noSets">Brak zestawów</string>
    <string name="showSetsElements">Przeglądaj zestaw</string>
    <string name="cancel">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="next">Dalej</string>
    <string name="test">Test</string>
</resources>